# ts3video

./: .astylerc  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeThirdParty.txt  README-NEW-RELEASE.md  README.md  astyle-cpp-code-style.cfg  astyle-vs2015.cfg  build-linux-cmake.bash  build-linux-deploy.bash  build-linux-env.bash  build-linux-make.bash  build-linux.bash  build-linux.sh  build-win-env.bat  build-win32-cmake.bat  build-win32-cmd.bat  build-win32-deploy.bat  build-win32-env.bat  build-win32-release.bat  build-win32-run-ide.bat  build-win32-vs2015.bat  build-win64-cmake.bat  build-win64-cmd.bat  build-win64-deploy.bat  build-win64-env.bat  build-win64-release.bat  build-win64-run-ide.bat  build-win64-vs2015.bat  cmake-win-x86-32.bat  cmake-win-x86-64.bat  deploy.py  env-win-all.bat  env-win-x86-32.bat  env-win-x86-64.bat  start-cmd-x86-32.bat  start-cmd-x86-64.bat  start-qtcreator-x86-32.bat  (+4 more)
projects/app-qml-client/: CMakeLists.txt
projects/app-qml-client/src/: App.cpp  App.hpp  App.qml  AppSettings.qml  CameraVideo.qml  CameraVideoAdapter.cpp  CameraVideoAdapter.hpp  CameraVideoSurface.cpp  CameraVideoSurface.hpp  Conference.qml  ConnectionInfo.qml  HomePage.qml  Logging.cpp  Logging.hpp  RemoteVideo.qml  RemoteVideoAdapter.cpp  RemoteVideoAdapter.hpp  RemoteVideoSurface.hpp  UserInfoListModel.cpp  UserInfoListModel.hpp  main.cpp  qtquickcontrols2.conf  res.qrc
projects/baselib/: CMakeLists.txt
projects/baselib/src/: exception.cpp  main.cpp
projects/corlib/: CMakeLists.txt
projects/corlib/include/: corparser.h  corprotocol.h  udpprotocol.h
projects/corlib/src/: corparser.c  corprotocol.c  parser.c
projects/humblesrvproc/: CMakeLists.txt
projects/humblesrvproc/src/: impl_linux.c  impl_windows.c  main.c
projects/libbase/: CMakeLists.txt  exception.cpp  exception.h  network.h
projects/libbase/libbase/: RingBuffer.h  RingQueue.h  defines.h  exception.cpp  exception.h
projects/libclient/: CMakeLists.txt
projects/libcorprotocol/: CMakeLists.txt  parser.c
projects/libcorprotocol/libcorprotocol/: parser.h  protocol.h
projects/libmediaprotocol/: CMakeLists.txt  protocol.cpp  protocol.h
projects/libmediaprotocol/libmediaprotocol/: protocol.cpp
projects/libqtasync/: CMakeLists.txt
projects/libqtcorprotocol/: CMakeLists.txt  qcorframe.h  qcorreply.h
projects/libqtcorprotocol/libqtcorprotocol/: qcorconnection.cpp  qcorconnection_p.h  qcorreply.cpp  qcorserver_p.h
projects/libqtteamspeak3/: CMakeLists.txt
projects/libqtteamspeak3/libqtteamspeak3/: ts3queryconsolesocket.h  ts3util.h
projects/libts3/: CMakeLists.txt  ts3util.cpp
projects/medlib/: CMakeLists.txt
projects/medlib/include/: medprotocol.h
projects/medlib/src/: medprotocol.cpp  protocol.cpp
projects/qcorlib/: CMakeLists.txt
projects/qcorlib/src/: qcorconnection.cpp  qcorconnection.h  qcorconnection_p.h  qcorframe.cpp  qcorframe.h  qcorreply.cpp  qcorreply.h  qcorrequest.h  qcorserver.cpp
projects/qcorprotocollib/: CMakeLists.txt  qcorprotocollib.vcxproj  qcorprotocollib.vcxproj.filters
projects/qcorprotocollib/src/: qcorconnection.cpp  qcorconnection.h  qcorconnection_p.h  qcorframe.cpp  qcorframe.h  qcorreply.cpp  qcorrequest.cpp  qcorrequest.h  qcorresponse.cpp  qcorresponse.h  qcorserver.cpp  qcorserver.h
projects/qmedlib/: CMakeLists.txt
projects/qswserverapp/: CMakeLists.txt
projects/qswserverlib/: CMakeLists.txt
projects/qtasync/: CMakeLists.txt
projects/qtasync/src/: qtasync.cpp  qtasync.h
projects/qtestexe/: CMakeLists.txt  qtestexe.vcxproj  qtestexe.vcxproj.filters
projects/qtestexe/src/: main.cpp  mycorserver.cpp  mycorserver.h  mytestobject.cpp  mytestobject.h  qtestclient.cpp  qtestclient.h
projects/qts3serverquerylib/: CMakeLists.txt
projects/qts3serverquerylib/src/: ts3queryconsolesocket.cpp  ts3queryconsolesocket.h  ts3serverbridge.cpp  ts3serverquery.cpp  ts3serverquery.h  ts3serverqueryconnection.cpp  ts3serverqueryconnection.h  ts3util.cpp  ts3util.h
projects/qts3videoclient/: CMakeLists.txt  ts3videoclient.pro
projects/qts3videoclient/res/: app.rc  default.css  fragment.fsh  res.qrc  vertex.vsh
projects/qts3videoclient/src/: aboutwidget.cpp  aboutwidget.ui  cameraframegrabber.cpp  cameraframegrabber.h  clientapplogic.cpp  clientapplogic.h  clientapplogic_p.h  clientcameravideowidget.cpp  clientcameravideowidget.h  clientvideowidget.cpp  clientvideowidget.h  clientvideowidget.ui  hangoutviewwidget.cpp  hangoutviewwidget.h  hangoutviewwidget_p.h  hintoverlaywidget.cpp  hintoverlaywidget_p.h  main.cpp  remoteclientvideowidget.cpp  remoteclientvideowidget.h  startupwidget.cpp  startupwidget.h  startupwidget.ui  tileviewwidget.cpp  tileviewwidget.h  tileviewwidget_p.h  ts3videoclient.cpp  ts3videoclient.h  ts3videoclient_p.h  udpvideoframedecoder.cpp  udpvideoframedecoder.h  videocollectionwidget.cpp  videocollectionwidget.h  videowidget.cpp  videowidget.h  videowidget_p.h  viewbase.cpp  viewbase.h  vp8decoder.h  vp8encoder.cpp  (+1 more)
projects/qts3videoclientplugin/: CMakeLists.txt
projects/qts3videoclientplugin/cmake/: copy-videoclient-into-package.cmake  generate-package-ini.cmake
projects/qts3videoclientplugin/package/: package.ini
projects/qts3videoclientplugin/src/: impl.cpp  impl.h  plugin.c  plugin.cpp  plugin.h
projects/qts3videocorelib/: CMakeLists.txt
projects/qts3videocorelib/src/: channelentity.cpp  channelentity.h  cliententity.cpp  cliententity.h  elws.cpp  elws.h  imageutil.cpp  imageutil.h  jsonprotocolhelper.cpp  jsonprotocolhelper.h  networkusageentity.cpp  networkusageentity.h  timeutil.cpp  ts3video.h  vp8frame.cpp  vp8frame.h  yuvframe.cpp  yuvframe.h
projects/qts3videoserver/: CMakeLists.txt  ts3videoserver.pro
projects/qts3videoserver/res/: app.rc  default.ini  res.qrc  server.ini
projects/qts3videoserver/src/: main.cpp  (+13 more)
projects/testapp/: CMakeLists.txt
projects/testexe/: CMakeLists.txt  testexe.vcxproj
projects/ts3plugin/: CMakeLists.txt  impl.cpp  impl.h  plugin.c  plugin_21.c  plugin_22.c  plugin_23.c  plugin_23.h  plugin_26.c
projects/videoclient/: CMakeLists.txt  README.md
(+471 files in other folders)
